--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,13 @@ a:hover {
 .uppercase {
     text-transform: uppercase;
 }    
+.btn {
+    text-decoration: none;
+    background: #EF233C;
+    color: white;
+    padding: 10px;
+    display: inline-block;
+}
 
 /* Header and Footer
 -------------------------------*/
