--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 #8D99AE - light blue
 #EDF2F4 - blue/white
 #EF233C - red
-#9932CC - dark orchid
+#9932CC - dark orchid 93, 164, 193
 #7B68EE - medium lateblue
 #9370DB - medium purple
 #FFF8DC - cornsilk
@@ -37,7 +37,11 @@ h2 {
 h3 {
     margin: 0;
 }
-
+h4 {
+    margin: 0;
+    display: center;
+    text-align: center;
+}
 h5 {
     margin: 0;
     display: left;
@@ -56,19 +60,11 @@ a:hover {
     padding: 60px 50px;
     overflow: hidden;
 }
-.col-narrow {
-    width: 30%;
-    float: left;
-}
-.col-wide {
-    width: 70%;
-    float: left;
-    padding-left: 20px;
-    min-height: 175px;
-}
+
 .uppercase {
     text-transform: uppercase;
 }    
+/* Download button */
 .btn {
     text-decoration: none;
     background: #9932CC;
@@ -93,7 +89,7 @@ header h1, header h2 {
     margin: 0;
 }
 .profile-img {
-    border-radius: 20%;
+    border-radius: 50%;
 }
 .download {
     position: absolute;
@@ -143,12 +139,34 @@ h3 ~ p {
 
 /* Education ---------------*/
 .education {
-    background: #9932CC;
+    /* background: linear-gradient(rgba(150, 50, 204, 0.8),rgba(150, 50, 204,0.5)),
+                url(../images/christina-truong.png) no-repeat fixed;
+    background-size: cover; */
+    background: #9932cc;
     color: white;
 }
 p + h3 {
     margin-top: 30px;
 }
 
-
+/* Media Queries ---------------*/
+@media (min-width: 900px) {
+    .col-narrow {
+        width: 30%;
+        float: left;
+    }
+    .col-wide {
+        width: 70%;
+        float: left;
+        padding-left: 20px;
+    }
+}
+@media (max-width: 899px) {
+    header {
+        text-align: center;
+    }
+    .profile-img {
+        width: 200px;
+    }
+}
 
