--- a/css/webdeveloper.css
+++ b/css/webdeveloper.css
@@ -83,11 +83,13 @@ header, footer {
 header {
     padding-top: 50px;
     position: relative;
-    text-align: center;
 }
 header h1, header h2 {
     color: #9370DB;
     margin: 0;
+}
+.profile-img {
+    border-radius: 50%;
 }
 .download {
     position: absolute;
